[package]
name = "edge-dhcp"
version = "0.7.0"
edition = "2021"
rust-version = "1.88"
description = "Async + `no_std` + no-alloc implementation of the DHCP protocol"
repository = "https://github.com/ivmarkov/edge-net"
readme = "README.md"
license = "MIT OR Apache-2.0"
categories = [
    "embedded",
    "no-std::no-alloc",
    "asynchronous",
    "network-programming",
]

[features]
default = ["io"]
std = ["io"]
io = ["embassy-futures", "embassy-time", "edge-nal"]
defmt = ["dep:defmt", "heapless/defmt", "embassy-time?/defmt"]

[dependencies]
heapless = { workspace = true }
log = { workspace = true, default-features = false, optional = true }
defmt = { workspace = true, default-features = false, optional = true }
rand_core = { workspace = true, default-features = false }
num_enum = { workspace = true, default-features = false }
embassy-futures = { workspace = true, optional = true }
embassy-time = { workspace = true, default-features = false, optional = true }
edge-nal = { workspace = true, optional = true }
edge-raw = { workspace = true, default-features = false }
