[package]
name = "edge-http"
version = "0.7.0"
edition = "2021"
rust-version = "1.88"
description = "Async + `no_std` + no-alloc implementation of the HTTP protocol"
repository = "https://github.com/ivmarkov/edge-net"
readme = "README.md"
license = "MIT OR Apache-2.0"
categories = [
    "embedded",
    "no-std::no-alloc",
    "asynchronous",
    "web-programming::http-client",
    "web-programming::http-server",
]

[features]
default = ["io"]
std = ["io"]
io = ["embedded-io-async", "edge-nal", "embassy-sync", "embassy-futures", "embassy-time"]
defmt = ["dep:defmt", "heapless/defmt"]

[dependencies]
log = { workspace = true, default-features = false, optional = true }
defmt = { workspace = true, default-features = false, optional = true }
embedded-io-async = { workspace = true, optional = true }
edge-nal = { workspace = true, optional = true }
heapless = { workspace = true }
httparse = { workspace = true, default-features = false }
base64 = { workspace = true, default-features = false }
sha1_smol = { workspace = true, default-features = false }
embassy-sync = { workspace = true, optional = true }
embassy-futures = { workspace = true, optional = true }
embassy-time = { workspace = true, optional = true }
