[package]
name = "edge-nal-embassy"
version = "0.8.0"
edition = "2021"
rust-version = "1.87"
description = "An implementation of edge-nal based on `embassy-net`"
repository = "https://github.com/ivmarkov/edge-net"
readme = "README.md"
license = "MIT OR Apache-2.0"
categories = [
    "embedded",
    "no-std::no-alloc",
    "asynchronous",
    "network-programming",
]

[features]
default = ["all"]
all = ["proto-ipv4", "proto-ipv6", "medium-ethernet", "medium-ip", "dns", "udp", "tcp", "multicast", "icmp", "dhcpv4", "dhcpv4-hostname"]
defmt = ["dep:defmt", "heapless/defmt", "embassy-net/defmt"]
proto-ipv4 = ["embassy-net/proto-ipv4"]
proto-ipv6 = ["embassy-net/proto-ipv6"]
medium-ethernet = ["embassy-net/medium-ethernet"]
medium-ip = ["embassy-net/medium-ip"]
dns = ["embassy-net/dns"]
udp = ["embassy-net/udp"]
tcp = ["embassy-net/tcp"]
icmp = ["embassy-net/icmp"]
multicast = ["embassy-net/multicast"]
dhcpv4 = ["embassy-net/dhcpv4"]
dhcpv4-hostname = ["embassy-net/dhcpv4-hostname"]

[dependencies]
log = { workspace = true, default-features = false, optional = true }
defmt = { workspace = true, default-features = false, optional = true }
embedded-io-async = { workspace = true }
edge-nal = { workspace = true }
heapless = { workspace = true }
embassy-net = { workspace = true }
embassy-futures = { workspace = true }
