[package]
name = "edge-nal-std"
version = "0.6.0"
edition = "2021"
rust-version = "1.87"
description = "A STD implementation of edge-nal based on `async-io`"
repository = "https://github.com/ivmarkov/edge-net"
readme = "README.md"
license = "MIT OR Apache-2.0"
categories = [
    "embedded",
    "no-std::no-alloc",
    "asynchronous",
    "network-programming"
]

[dependencies]
log = { workspace = true, default-features = true }
embedded-io-async = { workspace = true, features = ["std"] }
edge-nal = { workspace = true }
heapless = { workspace = true }
async-io = "2"
async-io-mini = { version = "0.4", optional = true }
futures-lite = "2"
libc = "0.2"
