[package]
name = "edge-ws"
version = "0.7.0"
edition = "2021"
rust-version = "1.87"
description = "Async + `no_std` + no-alloc implementation of the Websockets protocol"
repository = "https://github.com/ivmarkov/edge-net"
readme = "README.md"
license = "MIT OR Apache-2.0"
categories = [
    "embedded",
    "no-std::no-alloc",
    "asynchronous",
    "network-programming",
    "web-programming::websocket"
]

[features]
default = ["io"]
std = ["io"]
io = ["embedded-io-async"]

[dependencies]
log = { workspace = true, default-features = false, optional = true }
defmt = { workspace = true, default-features = false, optional = true }
embedded-io-async = { workspace = true, optional = true }
